Fixed the footer issue

--- a/indexx.html
+++ b/indexx.html
@@ -359,7 +359,7 @@
     <!-- Footer -->
     <section>
     <footer class="footer navStyle pt-5">
-        <div class="container-fluid text-center text-md-left">
+        <div class="container text-center text-md-left ">
     
             <!-- Grid row -->
             <div class="row pl-5">
