Modified the dotted recytangle of the contact section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
       </div>
     </nav>
 
-    <!-- <div class="container"> -->
 
     <!-- Full Page Image Header with Vertically Centered Content -->
     <header class="masthead">
@@ -98,7 +97,7 @@
 
     <!-- About US section -->
     <section id="about">
-      <div class="container-fluid p-5 text-center">
+      <div class="container p-5 text-center">
         <h1>About Us</h1>
                 <hr class=" text-center  goldLine">
 
@@ -148,6 +147,7 @@
 
     <!-- Featured Products -->
     <section id="featuredProducts">
+      <div class="container">
                         <h1 class="text-center pt-5 pb-3" id="products">Featured Products</h1>
                         <hr class=" text-center  goldLine">
       <div class="row"  >
@@ -251,6 +251,7 @@
           </div>
         </div>
       </div>
+    </div>
     </section>
 
     <!-- Form Section Desktop View-->
@@ -298,7 +299,7 @@
             </div>
             </div>
           </div>
-          <div class="row pb-5" id="displayContent">
+          <div class="row pb-5 pl-4" id="displayContent">
               <div class="col-sm-3 ">
                 <p class="greyColor">Our address</p>
                 <p class="contactText" >No.3 Portharcout Road, Umutoguma, Rivers State</p>
